--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=br;User Id=ReaderOfBooks;Password=Passw0rd;"
+    "Db": "Server=localhost;Database=br;User Id=ReaderOfBooks;Password=Passw0rd;"
   },
   "Logging": {
     "LogLevel": {
